--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Ricardo Rei
 position: Ph.D. Student & Research Scientist
 affiliation: Instituto Superior Técnico, INESC-ID, Unbabel
-email: ricardorei(at)unbabel.com
+email: ricardo.rei (at) tecnico.ulisboa.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
