--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic Information 
 title: Ricardo Rei
-position: Ph.D. Student & Research Scientist
-affiliation: Instituto Superior Técnico, INESC-ID, Unbabel
+position: Senior Research Scientist
+affiliation:  Unbabel, Instituto Superior Técnico, INESC-ID
 email: ricardo.rei (at) tecnico.ulisboa.pt
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Ricardo Rei Unbabel COMET
+keywords: Ricardo Rei Unbabel COMET Machine Translation LLM
 description: Academic website of Ricardo Rei
 canonical: https://minimal-light-theme.yliu.me/
 
