update info: missing files

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
 title: Ricardo Rei
 position: Senior Research Scientist
-affiliation:  Unbabel, Instituto Superior Técnico, INESC-ID
-email: ricardo.rei (at) tecnico.ulisboa.pt
+affiliation:  Unbabel, London, UK
+email: ricardo.rei (at) outlook.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
